# EverythingMoeAPI

./: .gitignore  README.md  push.bat  pyproject.toml  reverse_engineering.txt  start.bat
.github/workflows/: test.yml
api/: dependencies.py  main.py
app/: __init__.py
app/api/: dependencies.py  main.py
app/models/: schemas.py
app/routers/: about.py  activity.py  articles.py  backend.py  cache.py  categories.py  changelog.py  detector.py  graveyard.py  menu.py  search.py  sites.py  stats.py  tags.py
app/utils/: client.py  constants.py  parsers.py
models/: schemas.py
routers/: activity.py  categories.py  changelog.py  graveyard.py  menu.py  search.py  sites.py  stats.py  tags.py
tests/: test_api.py  test_client.py  test_parsers.py
utils/: client.py  constants.py  exceptions.py  parsers.py
