[build-system]
requires = ["setuptools >= 68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "everythingmoe-api"
version = "1.0.0"
description = "Unofficial Python API wrapper for everythingmoe.com"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">= 3.9"
authors = [
    {name = "EverythingMoe API Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests >= 2.28",
    "beautifulsoup4 >= 4.12",
    "fastapi >= 0.95",
    "uvicorn >= 0.20",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov",
    "httpx",
    "httpx2",
]

[project.urls]
Homepage = "https://github.com/itznan/EverythingMoeAPI"
Repository = "https://github.com/itznan/EverythingMoeAPI"
Issues = "https://github.com/itznan/EverythingMoeAPI/issues"

[tool.setuptools.packages.find]
include = ["api*", "models*", "routers*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
